Moved to the up-to-date version of Essence compiling